syntax = "proto2";

package frankenpaxos.fasterpaxos;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.fasterpaxos"
  flat_package: true
};

message HostPortProto {
  required string host = 1;
  required int32 port = 2;
}

message NettyConfigProto {
  required int32 f = 1;
  repeated HostPortProto server_address = 2;
  repeated HostPortProto heartbeat_address = 3;
}
